<resources>
    <string name="app_name">Bögdan</string>
    <string name="intro_to_app">Ready to deliver the best food in the world?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="create_your_account">Create your account</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="intro">Intro</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone number</string>
    <string name="terms_of_use">I agree that Feast for driver and its representatives\ncan contact me via e-mail, phone
        or SMS (in\nparticular, using automated means) using the e-mail address or phone number I provided, including\n
        for marketing purposes.\n
    </string>
    <string name="signed_up">Signed up</string>
    <string name="continue_sign_up">Continue</string>
    <string name="get_the_code">Get the code</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend code</string>
    <string name="verification_code_entered_was_invalid">Verification code entered was invalid</string>
    <string name="field_can_not_be_empty">Field can\'t be empty</string>
    <string name="select_a_picture_of_the_certificate">Select a picture of the certificate</string>
    <string name="capacity_of_car">Capacity of car(kg)</string>
    <string name="first_get_the_code">First get the code</string>
    <string name="online">Online</string>
    <string name="logout">Log out</string>
    <string name="user_signed_up_successfully">User signed up successfully</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_deliver_orders">Start deliver orders?</string>
    <string name="finish_deliver_orders">Finish deliver orders?</string>
    <string name="message_online">You can receive orders and accept or reject them</string>
    <string name="message_offline">You can\'t receive orders</string>
    <string name="wait">Wait for the administrator to see your data…</string>
    <string name="location_is_monitored">Location is monitored</string>
    <string name="channel_id" translatable="false">Location channel</string>
    <string name="order">Order</string>
    <string name="finish_delivery">Finish delivery</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirm">You confirm that you brought food to the client.</string>
    <string name="use_coordinate_tracking">Use location tracking?</string>
    <string name="confirm_tracking">If you confirm location tracking, your coordinates will be automatically
        transmitted
    </string>
    <string name="send_location">Send location</string>
    <string name="restaurant_phone_number">Restaurant: %1$s</string>
    <string name="client">Client: %1$s</string>
</resources>
