<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.login.VerificationCertificateActivity"
        tools:showIn="@layout/activity_verification_certificate">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:orientation="vertical">
        <ImageView
                android:id="@+id/ivCertificate"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:background="@drawable/ic_note"
                android:contentDescription="@string/intro"/>

        <Button
                android:id="@+id/btnSelectPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/select_a_picture_of_the_certificate"
                android:layout_marginTop="24dp"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCapacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp">

            <EditText
                    android:id="@+id/etCapacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/capacity_of_car"
                    android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:text="@string/sign_up"
                android:layout_marginTop="24dp"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>