<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.login.VerificationNumberActivity"
        tools:showIn="@layout/activity_verification_number">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

            <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:digits="0123456789+"/>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/btnGetCode"
                android:layout_width="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/get_the_code"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

            <EditText
                    android:id="@+id/etCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_confirmation_code"
                    android:inputType="phone"
                    android:digits="0123456789+"/>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/verify"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
